# ytplaylist

./: .gitignore  Main.hs  README.md  move1.txt  move2.txt  move3.txt  music_batch1.txt  music_batch2.txt  music_videos.txt  music_videos2.txt  youtube-playlist-manager.cabal
src/: HTTP.hs  OAuth.hs  Types.hs  YouTube.hs
test/: Test.hs
